generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id              String   @id @default(cuid())
  email           String   @unique
  password        String
  role            Role     @default(ALUMNA)
  nombre          String?
  apellido        String?
  cedula          String?
  fechaNacimiento DateTime?
  edad            Int?
  direccion       String?
  enrollments     Enrollment[]
  reviewedEnrollments Enrollment[] @relation("ReviewedBy")
  taughtClasses   Class[] @relation("TaughtBy")
  attendances     Attendance[]
  createdAt       DateTime @default(now())

  @@unique([cedula], name: "User_cedula_key")
}

model Class {
  id          String     @id @default(cuid())
  name        String
  description String?
  instructor  User       @relation("TaughtBy", fields: [instructorId], references: [id])
  instructorId String
  schedules   Schedule[]
  enrollments Enrollment[]
  attendances Attendance[]
  createdAt   DateTime   @default(now())
}

model Schedule {
  id        String   @id @default(cuid())
  class     Class    @relation(fields: [classId], references: [id], onDelete: Cascade)
  classId   String
  dayOfWeek DayOfWeek
  startTime String   // HH:MM format
  endTime   String   // HH:MM format
  location  String?
  createdAt DateTime @default(now())
}

model Enrollment {
  id             String   @id @default(cuid())
  student        User     @relation(fields: [studentId], references: [id])
  studentId      String
  class          Class    @relation(fields: [classId], references: [id])
  classId        String
  enrollmentDate DateTime @default(now())
  status         EnrollmentStatus @default(PENDING)
  // Review workflow fields
  reviewNote     String?
  reviewedAt     DateTime?
  reviewer       User?    @relation("ReviewedBy", fields: [reviewerId], references: [id])
  reviewerId     String?
  createdAt      DateTime @default(now())
}

model Event {
  id          String   @id @default(cuid())
  name        String
  description String?
  eventDate   DateTime
  location    String?
  createdAt   DateTime @default(now())
}

model Attendance {
  id          String   @id @default(cuid())
  student     User     @relation(fields: [studentId], references: [id])
  studentId   String
  class       Class    @relation(fields: [classId], references: [id])
  classId     String
  date        DateTime @default(now())
  present     Boolean  @default(false)
  note        String?
  createdAt   DateTime @default(now())
}

enum Role {
  ADMIN
  DIRECTORA_ACADEMICA
  PROFESORA
  ALUMNA
}

enum EnrollmentStatus {
  PENDING
  APPROVED
  REJECTED
}

enum DayOfWeek {
  MONDAY
  TUESDAY
  WEDNESDAY
  THURSDAY
  FRIDAY
  SATURDAY
  SUNDAY
}
